first version, working sub project pages

--- a/publications/identigram/index.html
+++ b/publications/identigram/index.html
@@ -14,10 +14,10 @@
     <title>Jaesik Park</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/mystyle.css" rel="stylesheet">
+    <link href="../../css/mystyle.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -47,19 +47,19 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li class="hidden">
-					<a href="index.html"></a>
+					<a href="../../index.html"></a>
 				</li>
 				<li >
-					<a href="about_me.html">About me</a>
+					<a href="../../about_me.html">About me</a>
+				</li>
+				<li class="active">
+					<a href="../../publications.html">Publications</a>
 				</li>
 				<li >
-					<a href="publications.html">Publications</a>
+					<a href="../../academic_activities.html">Academic activities</a>
 				</li>
 				<li >
-					<a href="academic_activities.html">Academic activities</a>
-				</li>
-				<li >
-					<a href="contact.html">Contact</a>
+					<a href="../../contact.html">Contact</a>
 				</li>
 			</ul>
 		</div>
@@ -68,42 +68,22 @@
 <!-- /.container-fluid -->
 </nav>
 
-
-<div class="container">
-<div class="container">
-	<div class="well">
+<!-- Header -->
+<header>
+	<div class="container" id="maincontent" tabindex="-1">
 		<div class="row">
-			<div class="col-lg-12 text-left">
-					<h1 class="name"><br></h1>
-			<div class="col-lg-3">
-					<img src="source/jaesik-park.jpg" class="img-responsive img-circle img-thumbnail">
-			</div>
-			<div class="col-lg-9">
-					<h1>Jaesik Park</h1>
-					<p class="lead">Hello! I am a research scientist of Intel visual computing lab located in beautiful California.</p>
-					<p>Note: please be kindly understood that I may not reply every emails about source codes posted in this webpage.</p>
-					<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
-					<ul class="list-group">
-					<li class="list-group-item">
-						2017.05. We are releasing www.tanksandtemples.org: website for benchmarking photogrammetry methods.
-					</li>
-					<li class="list-group-item">
-						2017.05. Our paper about image based 3D reconstruction benchmark is accepted to SIGGRAPH 2017.
-					</li>
-					<li class="list-group-item">
-						2017.02. An algorithm about learning based automatic 3D view selection is accepted to Computer Graphics Forum.
-					</li>
-					<li class="list-group-item">
-						2016.08. A paper about high-quality 3D reconstruction is accepted to TPAMI.
-					</li>
-					<li class="list-group-item">
-						2016.07. A paper about global point-cloud registration is accepted to ECCV 2016 as an oral presentation.
-					</li>
-					</ul>
-			</div>
+			<div class="col-lg-12">
+				<div class="intro-text">
+					<h1>Identigram</h1>
+				</div>
 			</div>
 		</div>
 	</div>
+</header>
+
+
+<div class="container">
+<h1>Test text</h1>
 </div>
 <!-- Footer -->
 <footer>
@@ -119,16 +99,16 @@
 </footer>
 
 <!-- jQuery -->
-<script src="js/jquery.js"></script>
+<script src="../../js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+<script src="../../js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript for Navbar -->
-<script src="js/jquery.easing.min.js"></script>
+<script src="../../js/jquery.easing.min.js"></script>
 
 <!-- Theme JavaScript for Navbar -->
-<script src="js/freelancer.js"></script>
+<script src="../../js/freelancer.js"></script>
 
 </body>
 
