--- a/about_me.html
+++ b/about_me.html
@@ -49,7 +49,7 @@
 				<li class="hidden">
 					<a href="index.html"></a>
 				</li>
-				<li >
+				<li class="active">
 					<a href="about_me.html">About me</a>
 				</li>
 				<li >
@@ -68,41 +68,73 @@
 <!-- /.container-fluid -->
 </nav>
 
-
-<div class="container">
-<div class="container">
-	<div class="well">
+<!-- Header -->
+<header>
+	<div class="container" id="maincontent" tabindex="-1">
 		<div class="row">
-			<div class="col-lg-12 text-left">
-					<h1 class="name"><br></h1>
-			<div class="col-lg-3">
-					<img src="source/jaesik-park.jpg" class="img-responsive img-circle img-thumbnail">
-			</div>
-			<div class="col-lg-9">
-					<h1>Jaesik Park</h1>
-					<p class="lead">Hello! I am a research scientist of Intel visual computing lab located in beautiful California.</p>
-					<p>Note: please be kindly understood that I may not reply every emails about source codes posted in this webpage.</p>
-					<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
-					<ul class="list-group">
-					<li class="list-group-item">
-						2017.05. We are releasing www.tanksandtemples.org: website for benchmarking photogrammetry methods.
-					</li>
-					<li class="list-group-item">
-						2017.05. Our paper about image based 3D reconstruction benchmark is accepted to SIGGRAPH 2017.
-					</li>
-					<li class="list-group-item">
-						2017.02. An algorithm about learning based automatic 3D view selection is accepted to Computer Graphics Forum.
-					</li>
-					<li class="list-group-item">
-						2016.08. A paper about high-quality 3D reconstruction is accepted to TPAMI.
-					</li>
-					<li class="list-group-item">
-						2016.07. A paper about global point-cloud registration is accepted to ECCV 2016 as an oral presentation.
-					</li>
-					</ul>
-			</div>
+			<div class="col-lg-12">
+				<div class="intro-text">
+					<h1>About me</h1>
+				</div>
 			</div>
 		</div>
+	</div>
+</header>
+
+
+<div class="container">
+
+<div class="container">
+	<div class="col-lg-6 text-left">
+			<h2> <span class="glyphicon glyphicon-briefcase"></span>  Work Experience</h2>
+			<ul class="list-group">
+			<li class="list-group-item">
+				<h4>Staff Research Scientist - Intel Labs</h4>
+				<span class="glyphicon glyphicon-map-marker"></span> Santa Clara, California, USA<br>
+				<span class="glyphicon glyphicon-calendar"></span> Dec 2015 - <kbd>current</kbd>
+			</li>
+			<li class="list-group-item">
+				<h4>Post-Doc Researcher - KAIST</h4>
+				<span class="glyphicon glyphicon-map-marker"></span> Daejeon, Republic of Korea<br>
+				<span class="glyphicon glyphicon-calendar"></span> Aug 2015 - Nov 2015
+			</li>
+			<li class="list-group-item">
+				<h4>Research Intern - Microsoft Research</h4>
+				Mentor: Sudipta N. Sinha<br>
+				<span class="glyphicon glyphicon-map-marker"></span> Redmond, Washington, USA<br>
+				<span class="glyphicon glyphicon-calendar"></span>
+				June 2013 – Sep. 2013
+			</li>
+			<li class="list-group-item">
+				<h4>Research Intern - Microsoft Research Asia</h4>
+				Mentor: Yasuyuki Matsushita <br>
+				<span class="glyphicon glyphicon-map-marker"></span> Beijing, China <br>
+				<span class="glyphicon glyphicon-calendar"></span>
+				April 2012 – Oct. 2012
+			</li>
+			</ul>
+	</div>
+	<div class="col-lg-6 text-left">
+			<h2> <span class="glyphicon glyphicon-education"></span>   Education</h2>
+			<ul class="list-group">
+			<li class="list-group-item">
+				<h4>Ph.D. in Electrical Engineering - KAIST</h4>
+				Advisor: Prof. In So Kweon, Co-Advisor: Dr. Yu-Wing Tai<br>
+				<span class="glyphicon glyphicon-map-marker"></span> Daejeon, Republic of Korea<br>
+				<span class="glyphicon glyphicon-calendar"></span> Feb. 2011 – Aug. 2015
+			</li>
+			<li class="list-group-item">
+				<h4>M.S. in Electrical Engineering - KAIST</h4>
+				Advisor: Prof. In So Kweon<br>
+				<span class="glyphicon glyphicon-map-marker"></span> Daejeon, Republic of Korea<br>
+				<span class="glyphicon glyphicon-calendar"></span> Feb. 2009 – Feb. 2011
+			</li>
+			<li class="list-group-item">
+				<h4>B.E. in Media Communication Eng. - Hanyang Univ.</h4>
+				<span class="glyphicon glyphicon-map-marker"></span> Seoul, Republic of Korea <br>
+				<span class="glyphicon glyphicon-calendar"></span> March 2005 – Feb. 2009
+			</li>
+			</ul>
 	</div>
 </div>
 <!-- Footer -->
