--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
 				<li >
 					<a href="academic_activities.html">Academic activities</a>
 				</li>
-				<li >
+				<li class="active">
 					<a href="contact.html">Contact</a>
 				</li>
 			</ul>
@@ -68,41 +68,28 @@
 <!-- /.container-fluid -->
 </nav>
 
-
-<div class="container">
-<div class="container">
-	<div class="well">
+<!-- Header -->
+<header>
+	<div class="container" id="maincontent" tabindex="-1">
 		<div class="row">
-			<div class="col-lg-12 text-left">
-					<h1 class="name"><br></h1>
-			<div class="col-lg-3">
-					<img src="source/jaesik-park.jpg" class="img-responsive img-circle img-thumbnail">
-			</div>
-			<div class="col-lg-9">
-					<h1>Jaesik Park</h1>
-					<p class="lead">Hello! I am a research scientist of Intel visual computing lab located in beautiful California.</p>
-					<p>Note: please be kindly understood that I may not reply every emails about source codes posted in this webpage.</p>
-					<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
-					<ul class="list-group">
-					<li class="list-group-item">
-						2017.05. We are releasing www.tanksandtemples.org: website for benchmarking photogrammetry methods.
-					</li>
-					<li class="list-group-item">
-						2017.05. Our paper about image based 3D reconstruction benchmark is accepted to SIGGRAPH 2017.
-					</li>
-					<li class="list-group-item">
-						2017.02. An algorithm about learning based automatic 3D view selection is accepted to Computer Graphics Forum.
-					</li>
-					<li class="list-group-item">
-						2016.08. A paper about high-quality 3D reconstruction is accepted to TPAMI.
-					</li>
-					<li class="list-group-item">
-						2016.07. A paper about global point-cloud registration is accepted to ECCV 2016 as an oral presentation.
-					</li>
-					</ul>
-			</div>
+			<div class="col-lg-12">
+				<div class="intro-text">
+					<h1>Contact</h1>
+				</div>
 			</div>
 		</div>
+	</div>
+</header>
+
+
+<div class="container">
+
+<div class="container">
+	<div class="col-lg-12 text-left">
+		<h3 class="name"> <span class="glyphicon glyphicon-envelope"></span> Email</h3>
+		[my_first_name] [dot] [my_last_name] [at] intel.com<br>
+		<h3 class="name"> <span class="glyphicon glyphicon-map-marker"></span> Office</h3>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d72189.2245696604!2d-121.99438614367072!3d37.38168085358596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fc992f63f4e37%3A0xd0f504b58ad8c0d0!2s3600+Juliette+Ln%2C+Santa+Clara%2C+CA+95054!5e0!3m2!1sen!2sus!4v1502067621687" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</div>
 </div>
 <!-- Footer -->
