--- a/publications/identigram/index.html
+++ b/publications/identigram/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-		<link rel="shortcut icon" type="image/x-icon" href="source/favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="https://syncle.github.io/source/favicon.ico">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,10 +14,10 @@
     <title>Jaesik Park</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../../css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://syncle.github.io/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../../css/mystyle.css" rel="stylesheet">
+    <link href="https://syncle.github.io/css/mystyle.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -41,25 +41,25 @@
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 				<span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
 			</button>
-			<a class="navbar-brand" href="index.html">Jaesik Park</a>
+			<a class="navbar-brand" href="https://syncle.github.io/index.html">Jaesik Park</a>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li class="hidden">
-					<a href="../../index.html"></a>
+					<a href="https://syncle.github.io/index.html"></a>
 				</li>
 				<li >
-					<a href="../../about_me.html">About me</a>
+					<a href="https://syncle.github.io/about_me.html">About me</a>
 				</li>
 				<li class="active">
-					<a href="../../publications.html">Publications</a>
+					<a href="https://syncle.github.io/publications.html">Publications</a>
 				</li>
 				<li >
-					<a href="../../academic_activities.html">Academic activities</a>
+					<a href="https://syncle.github.io/academic_activities.html">Academic activities</a>
 				</li>
 				<li >
-					<a href="../../contact.html">Contact</a>
+					<a href="https://syncle.github.io/contact.html">Contact</a>
 				</li>
 			</ul>
 		</div>
@@ -74,7 +74,7 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="intro-text">
-					<h1>Identigram</h1>
+					<h1>Identigram/Watermark Removal</h1>
 				</div>
 			</div>
 		</div>
@@ -83,7 +83,46 @@
 
 
 <div class="container">
-<h1>Test text</h1>
+<div class="col-lg-10 col-lg-offset-2">
+	<div class="col-lg-4">
+		<img src="teaser_01.jpg" class="img-responsive">
+	</div>
+	<div class="col-lg-3">
+		<img src="teaser_02.png" class="img-responsive">
+	</div>
+	<div class="col-lg-3">
+		<img src="teaser_03.png" class="img-responsive">
+	</div>
+</div>
+
+<div class="col-lg-8 col-lg-offset-2">
+	<h2>Abstract</h2>
+	<p> We introduce a method to repair an image which has been stamped by an identigram or a watermark. Our method is based on the cross-channel correlation which assures the co-occurrence of image discontinuities and correlation of color distributions across different color channels of an image. Using blind source separation, we find the transformation of color space which separates the structures of identigram and that of the original image into two different individual color channels. To repair the image contents in the corrupted channel, we formulate the problem using the Bayes’ rule where the prior and the likelihood probabilities are defined based on the cross-channel correlation assumption. We compare our results with results from inpainting and texture synthesis-based hole filling techniques on various examples. Our results are pleasable for real-world examples and have the maximum PSNR for synthetic examples.</p>
+</div>
+<div class="col-lg-8 col-lg-offset-2">
+	<h2>Publication(s)</h2>
+		<h3>Identigram/Watermark removal using cross-channel correlation</h3>
+		<p>Jaesik Park, Yu-Wing Tai and In-So Kweon<br>
+		CVPR 2012<br>
+		</p>
+		<a href="paper.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+		<a href="supp.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
+		</a>
+		<a href="bibtex.txt" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-list"></span> Bibtex
+		</a>
+		<a href="executable.zip" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-floppy-disk"></span> Executable
+		</a>
+		<a href="poster.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-blackboard"></span> Poster
+		</a>
+		<p><br></p>
+</div>
+
 </div>
 <!-- Footer -->
 <footer>
@@ -99,16 +138,16 @@
 </footer>
 
 <!-- jQuery -->
-<script src="../../js/jquery.js"></script>
+<script src="https://syncle.github.io/js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="../../js/bootstrap.min.js"></script>
+<script src="https://syncle.github.io/js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript for Navbar -->
-<script src="../../js/jquery.easing.min.js"></script>
+<script src="https://syncle.github.io/js/jquery.easing.min.js"></script>
 
 <!-- Theme JavaScript for Navbar -->
-<script src="../../js/freelancer.js"></script>
+<script src="https://syncle.github.io/js/freelancer.js"></script>
 
 </body>
 
