--- a/source/content_header_about_me.html
+++ b/source/content_header_about_me.html
@@ -6,25 +6,25 @@
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 				<span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
 			</button>
-			<a class="navbar-brand" href="index.html">Jaesik Park</a>
+			<a class="navbar-brand" href="https://syncle.github.io/index.html">Jaesik Park</a>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li class="hidden">
-					<a href="index.html"></a>
+					<a href="https://syncle.github.io/index.html"></a>
 				</li>
 				<li class="active">
-					<a href="about_me.html">About me</a>
+					<a href="https://syncle.github.io/about_me.html">About me</a>
 				</li>
 				<li >
-					<a href="publications.html">Publications</a>
+					<a href="https://syncle.github.io/publications.html">Publications</a>
 				</li>
 				<li >
-					<a href="academic_activities.html">Academic activities</a>
+					<a href="https://syncle.github.io/academic_activities.html">Academic activities</a>
 				</li>
 				<li >
-					<a href="contact.html">Contact</a>
+					<a href="https://syncle.github.io/contact.html">Contact</a>
 				</li>
 			</ul>
 		</div>
