--- a/source/content_publications_middle.html
+++ b/source/content_publications_middle.html
@@ -58,7 +58,7 @@
 		<p>Jaesik Park, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon<br>
 		TPAMI 2016<br>
 		</p>
-		<a href="https://sites.google.com/site/jsparkcv/publications/multiviewps" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/multiviewps/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 		<p><br></p>
@@ -109,7 +109,7 @@
 		<p>Jaesik Park, Yu-Wing Tai, Sudipta N. Sinha, and In So Kweon<br>
 		CVPR 2016<br>
 		</p>
-		<a href="https://sites.google.com/site/jsparkcv/publications/photoconsistency" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/photoconsistency/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 		<p><br></p>
@@ -252,7 +252,7 @@
 		<p>Jaesik Park, Hyeongwoo Kim, Yu-Wing Tai, Michael S. Brown and In-So Kweon<br>
 		TIP 2014<br>
 		</p>
-		<a href="https://sites.google.com/site/jsparkcv/publications/depthups" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/depthups/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 		<p><br></p>
@@ -322,7 +322,7 @@
 		<p>Jaesik Park, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai and In So Kweon<br>
 		CVPR 2014<br>
 		</p>
-		<a href="https://sites.google.com/site/jsparkcv/publications/lightcalib" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/lightcalib/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 		<p><br></p>
@@ -346,7 +346,7 @@
 		<p>Jaesik Park, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai and In So Kweon<br>
 		ICCV 2013<br>
 		Received 19th HumanTech Paper Award (Silver Prize), Samsung Electronics Corp.</p>
-		<a href="https://sites.google.com/site/jsparkcv/publications/multiviewps" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/multiviewps/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 		<p><br></p>
@@ -414,7 +414,7 @@
 		<p>Jaesik Park, Yu-Wing Tai and In-So Kweon<br>
 		CVPR 2012<br>
 		</p>
-		<a href="https://sites.google.com/site/jsparkcv/publications/identigram" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/identigram/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 		<p><br></p>
@@ -454,7 +454,7 @@
 		<p>Jaesik Park*, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown and In-So Kweon<br>
 		ICCV 2011<br>
 		*Equal contributions.</p>
-		<a href="https://sites.google.com/site/jsparkcv/publications/depthups" target="_blank" class="btn btn-default" role="button">
+		<a href="publications/depthups/index.html" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-home"></span> Project Page
 		</a>
 		<p><br></p>
