--- a/source/header.html
+++ b/source/header.html
@@ -3,7 +3,7 @@
 
 <head>
 
-		<link rel="shortcut icon" type="image/x-icon" href="source/favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="https://syncle.github.io/source/favicon.ico">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
