--- a/about_me.html
+++ b/about_me.html
@@ -3,7 +3,7 @@
 
 <head>
 
-		<link rel="shortcut icon" type="image/x-icon" href="source/favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="https://syncle.github.io/source/favicon.ico">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,10 +14,10 @@
     <title>Jaesik Park</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://syncle.github.io/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/mystyle.css" rel="stylesheet">
+    <link href="https://syncle.github.io/css/mystyle.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -41,25 +41,25 @@
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 				<span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
 			</button>
-			<a class="navbar-brand" href="index.html">Jaesik Park</a>
+			<a class="navbar-brand" href="https://syncle.github.io/index.html">Jaesik Park</a>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li class="hidden">
-					<a href="index.html"></a>
+					<a href="https://syncle.github.io/index.html"></a>
 				</li>
 				<li class="active">
-					<a href="about_me.html">About me</a>
+					<a href="https://syncle.github.io/about_me.html">About me</a>
 				</li>
 				<li >
-					<a href="publications.html">Publications</a>
+					<a href="https://syncle.github.io/publications.html">Publications</a>
 				</li>
 				<li >
-					<a href="academic_activities.html">Academic activities</a>
+					<a href="https://syncle.github.io/academic_activities.html">Academic activities</a>
 				</li>
 				<li >
-					<a href="contact.html">Contact</a>
+					<a href="https://syncle.github.io/contact.html">Contact</a>
 				</li>
 			</ul>
 		</div>
@@ -151,16 +151,16 @@
 </footer>
 
 <!-- jQuery -->
-<script src="js/jquery.js"></script>
+<script src="https://syncle.github.io/js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+<script src="https://syncle.github.io/js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript for Navbar -->
-<script src="js/jquery.easing.min.js"></script>
+<script src="https://syncle.github.io/js/jquery.easing.min.js"></script>
 
 <!-- Theme JavaScript for Navbar -->
-<script src="js/freelancer.js"></script>
+<script src="https://syncle.github.io/js/freelancer.js"></script>
 
 </body>
 
