--- a/source/content_index.html
+++ b/source/content_index.html
@@ -13,6 +13,9 @@
 					<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 					<ul class="list-group">
 					<li class="list-group-item">
+						2017.08. Launching new homepage for better visualization on workstation and mobile.
+					</li>
+					<li class="list-group-item">
 						2017.05. We are releasing www.tanksandtemples.org: website for benchmarking photogrammetry methods.
 					</li>
 					<li class="list-group-item">
