--- a/source/content_about_me.html
+++ b/source/content_about_me.html
@@ -6,12 +6,12 @@
 			<li class="list-group-item">
 				<h4>Staff Research Scientist - Intel Labs</h4>
 				<span class="glyphicon glyphicon-map-marker"></span> Santa Clara, California, USA<br>
-				<span class="glyphicon glyphicon-calendar"></span> Dec 2015 - <kbd>current</kbd>
+				<span class="glyphicon glyphicon-calendar"></span> Dec. 2015 - <kbd>current</kbd>
 			</li>
 			<li class="list-group-item">
 				<h4>Post-Doc Researcher - KAIST</h4>
 				<span class="glyphicon glyphicon-map-marker"></span> Daejeon, Republic of Korea<br>
-				<span class="glyphicon glyphicon-calendar"></span> Aug 2015 - Nov 2015
+				<span class="glyphicon glyphicon-calendar"></span> Aug. 2015 - Nov. 2015
 			</li>
 			<li class="list-group-item">
 				<h4>Research Intern - Microsoft Research</h4>
