new css for dataset page

--- a/publications/colored_pointcloud_registration/index.html
+++ b/publications/colored_pointcloud_registration/index.html
@@ -65,19 +65,6 @@
 <!-- /.container-fluid -->
 </nav>
 
-<!-- Header -->
-<header>
-	<div class="container" id="maincontent" tabindex="-1">
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="intro-text">
-				</div>
-			</div>
-		</div>
-	</div>
-</header>
-
-<div class="col-lg-8 col-lg-offset-2">
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -91,35 +78,35 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="image/apt.png" alt="Chania">
-      <div class="carousel-caption">
+      <img src="image/gth_apt.png" alt="apartment">
+			<div class="carousel-caption">
         <h3>Apartment</h3>
       </div>
     </div>
 
     <div class="item">
-      <img src="image/bedroom.png" alt="Chicago">
-      <div class="carousel-caption">
+      <img src="image/gth_bedroom.png" alt="bedroom">
+			<div class="carousel-caption">
         <h3>Bedroom</h3>
       </div>
     </div>
 
     <div class="item">
-      <img src="image/boardroom.png" alt="New York">
-      <div class="carousel-caption">
+      <img src="image/gth_boardroom.png" alt="boardroom">
+			<div class="carousel-caption">
         <h3>Boardroom</h3>
       </div>
     </div>
 
 		<div class="item">
-			<img src="image/lobby.png" alt="New York">
+			<img src="image/gth_lobby.png" alt="lobby">
 			<div class="carousel-caption">
 				<h3>Lobby</h3>
 			</div>
 		</div>
 
 		<div class="item">
-			<img src="image/loft.png" alt="New York">
+			<img src="image/gth_loft.png" alt="loft">
 			<div class="carousel-caption">
 				<h3>Loft</h3>
 			</div>
@@ -135,7 +122,6 @@
     <span class="glyphicon glyphicon-chevron-right"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>
 </div>
 
 <div class="col-lg-8 col-lg-offset-2">
