--- a/publications/colored_pointcloud_registration/license.html
+++ b/publications/colored_pointcloud_registration/license.html
@@ -17,7 +17,7 @@
     <link href="https://syncle.github.io/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="https://syncle.github.io/css/mystyle.css" rel="stylesheet">
+    <link href="https://syncle.github.io/css/mystyle_dataset.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -69,24 +69,12 @@
 <header>
 	<div class="container" id="maincontent" tabindex="-1">
 		<div class="row">
-			<div class="col-lg-12">
-				<div class="intro-text">
-					<h2>License</h2>
-				</div>
-			</div>
 		</div>
 	</div>
 </header>
 
 <div class="col-lg-8 col-lg-offset-2">
-	<div class="alert alert-warning">
-	  <span class="glyphicon glyphicon-alert"></span> <strong>Please read carefully</strong> the following terms and conditions and any accompanying documentation before you download and/or use the Indoor Lidar-RGBD Scan Dataset (also referred to as the "Data"). By downloading and/or using the Data, you acknowledge that you have read these terms and conditions, understand them, and agree to be bound by them. If you do not agree with these terms and conditions, you must not download and/or use the Data.
-	</div>
-
-	<h2>Copyright</h2>
-	The benchmark data on this site is copyright by us and published under the <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 License</a>. This means that you must attribute the work in the manner specified by the authors, you may not use this work for commercial purposes and if you alter, transform, or build upon this work, you may distribute the resulting work only under the same license.
-	<h2>Publication</h2>
-	A reference to our benchmark must be put in any work that makes use of the dataset. For research papers, cite our publication as below
+	The entire dataset, including both RGB-D scans and reconstructed models, is in the <mark><a href="https://wiki.creativecommons.org/wiki/Public_domain" target="_blank">public domain</a></mark>. Any part of the dataset can be used for any purpose with proper attribution. If you use any of the data, please cite our paper below.
 <pre>
 @inproceedings{Park2017,
 	author    = {Jaesik Park and Qian-Yi Zhou and Vladlen Koltun},
@@ -95,14 +83,7 @@
 	year      = {2017},
 }
 </pre>
-	<h2>License Grant</h2>
-	We grant a non-exclusive, non-transferable, free of charge right to install the Data on computers owned, leased or otherwise controlled by you and/or your organisation if the use of the Data is for the sole purpose of performing non-commercial scientific research. Any other use, in particular any use for commercial purposes, is prohibited. This includes, without limitation, incorporation in a commercial product, use in a commercial service, or production of other artefacts for commercial purposes including, for example, 3D models, movies, or video games. The Data may not be reproduced, modified, and/or made available in any form to any third party without our prior written permission.
-	<h2>Disclaimer of Representations and Warranties</h2>
-	The dataset comes "AS IS", without express or implied warranty. Although every effort has been made to ensure accuracy, we do not accept any responsibility for errors or omissions.
-	<h2>Limitation of Liability</h2>
-	Under no circumstances shall we be liable for any incidental, special, indirect, or consequential damages arising out of or relating to this license, including but not limited to, any lost profits, business interruption, loss of programs or other data, or all other commercial damages or losses, even if advised of the possibility thereof.
-	<h2>No Maintenance Services</h2>
-	You understand and agree that we are under no obligation to provide either maintenance services, update services, notices of latent defects, or corrections of defects with regard to the Data. We nevertheless reserve the right to update, modify, or discontinue the Data at any time.
+
 </div>
 
 <!-- Footer -->
