css header white color for dataset page

--- a/publications/colored_pointcloud_registration/license.html
+++ b/publications/colored_pointcloud_registration/license.html
@@ -73,6 +73,8 @@
 	</div>
 </header>
 
+<div class="container">
+
 <div class="col-lg-8 col-lg-offset-2">
 	The entire dataset, including both RGB-D scans and reconstructed models, is in the <mark><a href="https://wiki.creativecommons.org/wiki/Public_domain" target="_blank">public domain</a></mark>. Any part of the dataset can be used for any purpose with proper attribution. If you use any of the data, please cite our paper below.
 <pre>
@@ -83,6 +85,8 @@
 	year      = {2017},
 }
 </pre>
+
+</div>
 
 </div>
 
