css header spacing fix

--- a/publications/colored_pointcloud_registration/contact.html
+++ b/publications/colored_pointcloud_registration/contact.html
@@ -17,7 +17,7 @@
     <link href="https://syncle.github.io/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="https://syncle.github.io/css/mystyle.css" rel="stylesheet">
+    <link href="https://syncle.github.io/css/mystyle_dataset.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -64,6 +64,14 @@
 	</div>
 <!-- /.container-fluid -->
 </nav>
+
+<!-- Header -->
+<header>
+	<div class="container" id="maincontent" tabindex="-1">
+		<div class="row">
+		</div>
+	</div>
+</header>
 
 <div class="col-lg-8 col-lg-offset-2">
 	<h2>You can reach the authors at the following address:</h2>
