--- a/publications/colored_pointcloud_registration/index.html
+++ b/publications/colored_pointcloud_registration/index.html
@@ -17,7 +17,7 @@
     <link href="https://syncle.github.io/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="https://syncle.github.io/css/mystyle.css" rel="stylesheet">
+    <link href="https://syncle.github.io/css/mystyle_dataset.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -64,6 +64,14 @@
 	</div>
 <!-- /.container-fluid -->
 </nav>
+
+<!-- Header -->
+<header>
+	<div class="container" id="maincontent" tabindex="-1">
+		<div class="row">
+		</div>
+	</div>
+</header>
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
